---
source: crates/cli/src/test.rs
expression: content
---
use crate::prelude::*;

/// Core business logic for file processing
#[derive(Debug)]
pub struct FileProcessor {
    cache: IndexMap<String, String>,
}

impl FileProcessor {
    pub fn new() -> Self {
        Self { cache: IndexMap::new() }
    }

    pub fn process_file(&mut self, path: &PathBuf) -> Result<String, ProcessingError> {
        Ok(format!("Processed: {}", path.display()))
    }

    pub fn get_cache_size(&self) -> usize {
        self.cache.len()
    }
}
